--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,15 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+*.pt
+*.pth
+*.wav
+*.mp3
+*.ogg
+*.swp
+*.swo
+
+backups/*
+lightning_logs/
+dataset_cache
